--- a/MoneySplitter.Infrastructure/MoneySplitter.Infrastructure.csproj
+++ b/MoneySplitter.Infrastructure/MoneySplitter.Infrastructure.csproj
@@ -1,7 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MoneySplitter.Models\MoneySplitter.Models.csproj" />
+  </ItemGroup>
 
 </Project>
