--- a/MoneySplitter.Win10/MoneySplitter.Win10.csproj
+++ b/MoneySplitter.Win10/MoneySplitter.Win10.csproj
@@ -95,11 +95,13 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Common\NavigateManager.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
+    <Compile Include="ViewModels\ShellViewModel.cs" />
     <Compile Include="Views\LoginView.xaml.cs">
       <DependentUpon>LoginView.xaml</DependentUpon>
     </Compile>
@@ -150,6 +152,10 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MoneySplitter.Infrastructure\MoneySplitter.Infrastructure.csproj">
+      <Project>{51e118c0-0ebe-4381-b1ab-88c49db00321}</Project>
+      <Name>MoneySplitter.Infrastructure</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MoneySplitter.Models\MoneySplitter.Models.csproj">
       <Project>{9d4cd27c-a963-4c5b-b2ec-5aebd0e2de6e}</Project>
       <Name>MoneySplitter.Models</Name>
