--- a/MoneySplitter.Services/MoneySplitter.Services.csproj
+++ b/MoneySplitter.Services/MoneySplitter.Services.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MoneySplitter.Infrastructure\MoneySplitter.Infrastructure.csproj" />
     <ProjectReference Include="..\MoneySplitter.Models\MoneySplitter.Models.csproj" />
   </ItemGroup>
 
