create Navigation menu

--- a/MoneySplitter.Services/MoneySplitter.Services.csproj
+++ b/MoneySplitter.Services/MoneySplitter.Services.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <PackageTargetFallback>$(PackageTargetFallback);portable-win+net45+wp8+win81+wpa8</PackageTargetFallback>
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
 
