--- a/MoneySplitter.Infrastructure/MoneySplitter.Infrastructure.csproj
+++ b/MoneySplitter.Infrastructure/MoneySplitter.Infrastructure.csproj
@@ -1,8 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <PackageTargetFallback>$(PackageTargetFallback);portable-win+net45+wp8+win81+wpa8</PackageTargetFallback>
     <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Caliburn.Micro.Core" Version="3.2.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MoneySplitter.Models\MoneySplitter.Models.csproj" />
