--- a/MoneySplitter.Services/MoneySplitter.Services.csproj
+++ b/MoneySplitter.Services/MoneySplitter.Services.csproj
@@ -7,11 +7,19 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="timer" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MoneySplitter.Infrastructure\MoneySplitter.Infrastructure.csproj" />
     <ProjectReference Include="..\MoneySplitter.Models\MoneySplitter.Models.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Windows.Foundation.UniversalApiContract">
+      <HintPath>C:\Program Files (x86)\Windows Kits\10\References\10.0.16299.0\Windows.Foundation.UniversalApiContract\5.0.0.0\Windows.Foundation.UniversalApiContract.winmd</HintPath>
+      <IsWinMDFile>true</IsWinMDFile>
+    </Reference>
   </ItemGroup>
 
 </Project>
