--- a/MoneySplitter.Managers/MoneySplitter.Managers.csproj
+++ b/MoneySplitter.Managers/MoneySplitter.Managers.csproj
@@ -4,4 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MoneySplitter.Infrastructure\MoneySplitter.Infrastructure.csproj" />
+    <ProjectReference Include="..\MoneySplitter.Models\MoneySplitter.Models.csproj" />
+    <ProjectReference Include="..\MoneySplitter.Services\MoneySplitter.Services.csproj" />
+  </ItemGroup>
+
 </Project>
