--- a/MoneySplitter.Win10/MoneySplitter.Win10.csproj
+++ b/MoneySplitter.Win10/MoneySplitter.Win10.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Extensions\XamlElementExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\AddTransactionViewModel.cs" />
+    <Compile Include="ViewModels\FriendDetailsViewModel.cs" />
     <Compile Include="ViewModels\IncomingAndOutcomingViewModel.cs" />
     <Compile Include="ViewModels\SearchUsersViewModel.cs" />
     <Compile Include="ViewModels\FriendsViewModel.cs" />
@@ -137,6 +138,9 @@
     <Compile Include="ViewModels\TransactionsViewModel.cs" />
     <Compile Include="Views\AddTransactionView.xaml.cs">
       <DependentUpon>AddTransactionView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\FriendDetailsView.xaml.cs">
+      <DependentUpon>FriendDetailsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\IncomingAndOutcomingView.xaml.cs">
       <DependentUpon>IncomingAndOutcomingView.xaml</DependentUpon>
@@ -214,6 +218,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\AddTransactionView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\FriendDetailsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
