--- a/MoneySplitter.Win10/MoneySplitter.Win10.csproj
+++ b/MoneySplitter.Win10/MoneySplitter.Win10.csproj
@@ -143,6 +143,7 @@
       <DependentUpon>UserDetailsControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Defines.cs" />
+    <Compile Include="Dependecies\Dependecies.cs" />
     <Compile Include="Extensions\XamlElementExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\AddTransactionViewModel.cs" />
