--- a/MoneySplitter.Win10/MoneySplitter.Win10.csproj
+++ b/MoneySplitter.Win10/MoneySplitter.Win10.csproj
@@ -197,7 +197,8 @@
       <SubType>Designer</SubType>
     </AppxManifest>
     <None Include="MoneySplitter.Win10_TemporaryKey.pfx" />
-    <PRIResource Include="Strings\Ru.resw" />
+    <PRIResource Include="Strings\En.resw" />
+    <Content Include="Strings\Ru.resw" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Default.rd.xml" />
@@ -208,7 +209,6 @@
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
-    <Content Include="Strings\just.txt" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
