--- a/MoneySplitter.Win10/MoneySplitter.Win10.csproj
+++ b/MoneySplitter.Win10/MoneySplitter.Win10.csproj
@@ -197,8 +197,9 @@
       <SubType>Designer</SubType>
     </AppxManifest>
     <None Include="MoneySplitter.Win10_TemporaryKey.pfx" />
-    <PRIResource Include="Strings\En.resw" />
+    <Content Include="Strings\En.resw" />
     <Content Include="Strings\Ru.resw" />
+    <Content Include="Strings\udn.resw" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Default.rd.xml" />
